# CulinaryRecipesApp/CulinaryRecipesApp/ViewModels/LoginViewModel.cs
@@ -1,24 +1,72 @@
-﻿using CulinaryRecipesApp.Views;
+﻿using CulinaryRecipesApp.Services;
+using CulinaryRecipesApp.ViewModels.Abstract;
+using CulinaryRecipesApp.Views;
+using RecipeAppService;
 using System;
-using System.Collections.Generic;
-using System.Text;
+using System.Threading.Tasks;
+using API.Helpers;
 using Xamarin.Forms;
 
 namespace CulinaryRecipesApp.ViewModels
 {
     public class LoginViewModel : BaseViewModel
     {
+        private readonly UserDataStore userDataStore;
+
+        private string email;
+        private string password;
+
+        public string Email
+        {
+            get => email;
+            set => SetProperty(ref email, value);
+        }
+
+        public string Password
+        {
+            get => password;
+            set => SetProperty(ref password, value);
+        }
+
         public Command LoginCommand { get; }
 
         public LoginViewModel()
         {
-            LoginCommand = new Command(OnLoginClicked);
+            userDataStore = new UserDataStore(); // Zakładam, że masz serwis do zarządzania danymi użytkowników
+
+            LoginCommand = new Command(async () => await OnLoginClicked());
         }
 
-        private async void OnLoginClicked(object obj)
+        private async Task OnLoginClicked()
         {
-            // Prefixing with `//` switches to a different navigation stack instead of pushing to the active one
-            await Shell.Current.GoToAsync($"//{nameof(AboutPage)}");
+            if (string.IsNullOrWhiteSpace(Email) || string.IsNullOrWhiteSpace(Password))
+            {
+                // Możesz obsłużyć przypadek, gdy email lub hasło są puste
+                await Application.Current.MainPage.DisplayAlert("Error", "Please enter email and password.", "OK");
+                return;
+            }
+
+            // Pobierz użytkownika na podstawie emaila z serwisu (lub innej odpowiedniej metody)
+            var user = await userDataStore.GetUser(Email);
+
+            if (user.Email.Equals("1"))
+            {
+                // Obsłuż przypadek, gdy użytkownik nie istnieje
+                await Application.Current.MainPage.DisplayAlert("Error", "User not found.", "OK");
+                return;
+            }
+
+            // Sprawdź hasło tylko jeśli użytkownik nie jest null
+            if (!PasswordHelper.VerifyPassword(Password, user.PasswordHash))
+            {
+                // Obsłuż przypadek, gdy hasło jest niepoprawne
+                await Application.Current.MainPage.DisplayAlert("Error", "Invalid email or password.", "OK");
+            }
+            else
+            {
+                // Przejdź do kolejnej strony po poprawnym zalogowaniu
+                await Shell.Current.GoToAsync($"//{nameof(AboutPage)}");
+            }
         }
     }
 }
